# lisper

./: .gitignore  consts.py  interpreter.py  lisp.py  main.py  setup.sh  stdlib.lisper  syntax.py
examples/: fact.lisper  fib.lisper  print.lisper  typeof.lisper  types.lisper
lisper-cpp/: CMakeLists.txt  a.out  parser.cc
lisper-cpp/main/: CMakeLists.txt
lisper-cpp/src/: CMakeLists.txt
lisper-cpp/src/lisper/: lexer.l
lisper-cpp/tests/: CMakeLists.txt
